# trading-bot

./: .dockerignore  .editorconfig  .env.deploy.api.example  .env.deploy.worker.example  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  README.md  docker-compose.yml  go.mod  go.sum  pyproject.toml
app/: __init__.py  backtest.py  config.py  main.py  worker.py
docs/: agent-workflow.md  architecture.md  data-model.md  decisions.md  features.md  monthly-review-template.md  pr-metadata.md  product-spec.md  roadmap.md  runbook.md  testing.md
proto/: trading.pb.go  trading.proto  trading_grpc.pb.go
scripts/: check_pr_metadata.py  codex_review_status.py  init_db.py  post_deploy_smoke_check.py  run_all_backtests.py  runtime_entrypoint.py  train_xgboost.py
tests/: test_additional_strategies.py  test_backtest_cli.py  test_backtest_service.py  test_binance_market_data_client.py  test_binance_order_client.py  test_canary_rollout_service.py  test_check_pr_metadata.py  test_codex_review_status.py  test_config.py  test_console_api.py  test_controls_api.py  test_database_models.py  test_ema_adx_trend_strategy.py  test_ema_adx_trend_volume_strategy.py  test_ema_crossover_strategy.py  test_env_templates.py  test_execution_factory.py  test_features.py  test_health.py  test_interval_scheduler.py  test_live_execution_service.py  test_live_fill_reconciliation_service.py  test_live_incident_auto_halt_service.py  test_live_performance_review_service.py  test_live_readiness_service.py  test_live_reconcile_job.py  test_live_risk_hard_gate_service.py  test_market_data_api.py  test_market_data_service.py  test_market_data_sync_service.py  test_multi_timeframe.py  test_notification_service.py  test_operational_control_service.py  (+24 more)
(+189 files in other folders)
