[project]
name = "trading-bot"
version = "0.1.0"
description = "Paper-trading-first trading bot scaffold"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "uvicorn>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "pre-commit>=4.2.0,<5.0.0",
    "pytest>=8.4.0,<9.0.0",
    "ruff>=0.12.0,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
